--- a/practice/src/main/resources/application.yml
+++ b/practice/src/main/resources/application.yml
@@ -4,5 +4,16 @@ spring:
     password: root
     url: jdbc:mysql://localhost:3306/elites_center
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mail:
+    host: smtp.qq.com
+    username: 1241683615@qq.com
+    password: rlmkjoexjtoiibbj
+    default-encoding: utf-8
+
 server:
   port: 8080
+logging:
+  level:
+    root: info
+  file:
+    path: /Users/qwer/IdeaProjects/demo/logs
