--- a/spring_s/pom.xml
+++ b/spring_s/pom.xml
@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.example</groupId>
-        <artifactId>spring_source</artifactId>
+        <groupId>com.example</groupId>
+        <artifactId>demo</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>IOC</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>spring_s</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
