add:读取xml自动注册bean

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>mybatis-generator</module>
         <module>mybatis_source</module>
         <module>spring_source</module>
-        <module>spring_s</module>
+        <module>spring-simple</module>
     </modules>
 
     <properties>
@@ -38,10 +38,10 @@
     <description>demo</description>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-test</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
